--- a/src/components/css/moderator/ItemTable.css
+++ b/src/components/css/moderator/ItemTable.css
@@ -1,6 +1,7 @@
 .header {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: white;
+    margin: auto;
 }
 
 .outer_div{
@@ -13,6 +14,9 @@
 
 .table-div {
     background-color: white;
+    width: 700px;
+    margin: auto;
+    padding-top: 20px;
 }
 .th1 {
     width: 100px;
@@ -23,25 +27,29 @@
 .th2{
     width: 150px;
     background: rgb(184, 177, 177);
+    border-color: black;
 }
 
 .td1{
     width: 100px;
     background: rgb(223, 218, 218);
+    border-color: black;
+   margin: 0%;
 }
 
 .td2 {
     width: 150px;
     background: rgb(223, 218, 218);
+    border-color: black;
 }
 
 .td1:hover {
-    background-color: rgb(250, 104, 104);
-    font-weight: 200;
+    background-color: rgb(250, 244, 244);
+    font-weight: 500;
 }
 .td2:hover {
-    background-color: rgb(250, 104, 104);
-    font-weight: 200;
+    background-color: rgb(250, 244, 244);
+    font-weight: 500;
 }
 
 
