--- a/src/components/css/moderator/ItemTable.css
+++ b/src/components/css/moderator/ItemTable.css
@@ -58,5 +58,40 @@
     height: 40px;
 } 
 
+.oneline-btn{
+    display: table-cell;
+    
+     margin-right: 1000;
+    padding-left: 20px; 
+    margin-left: 100px;
+    border: 20px;
+   
+   
+}
+
+
+.back-btn-div {
+ 
+padding-left: 50px;
+margin-left: 200px;
+width: 1100px;
+height: 100px;
+border-color: black;
+}
+
+.addNewItem-btn-div {
+  
+   
+    margin-right: 10px;
+    width: 200px;
+    padding-right: 50px;
+    padding-top: 30px;
+}
+
+.link-outer-div{
+    width: 1300px;
+}
+
+
 
 
