--- a/src/components/css/moderator/complainform.css
+++ b/src/components/css/moderator/complainform.css
@@ -150,7 +150,7 @@
 
 .form-inputs1 {
   margin-bottom: 0.5rem;
-  width: 80%;
+  width: 100%;
   margin-bottom: 20px;
   margin-top: 20px;
 }
@@ -175,7 +175,7 @@
   outline: none;
   border-radius: 10px;
   height: 40px;
-  width: 70%;
+  width: 200%;
   border: none;
 }
 
@@ -221,4 +221,18 @@
 
 .new {
   background-color: rgb(218, 38, 38);
+}
+
+.delivery-header {
+  background-color: rgb(218, 38, 38);
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 30px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-align: center;
+  padding-left: 600px;
 }
