--- a/src/components/css/Form.css
+++ b/src/components/css/Form.css
@@ -1,5 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster);
-
+.E {
+  background-image: url("https://www.teahub.io/photos/full/310-3107087_white-background-wallpaper-hd-1080p-free-download.jpg");
+  width: 100%;
+  height: 1000px;
+}
 .circle {
   margin: auto;
   height: 300px;
@@ -14,31 +17,6 @@
 .leftside {
   float: right;
   margin-right: 100px;
-}
-
-.leftside h1 {
-  color: #d4d4d4;
-  text-align: center;
-  line-height: 50px;
-  margin-top: -350px;
-  -moz-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px)
-    skewX(1deg) skewY(1deg);
-  -webkit-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px)
-    skewX(1deg) skewY(1deg);
-  -o-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px)
-    skewX(1deg) skewY(1deg);
-  -ms-transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px)
-    skewX(1deg) skewY(1deg);
-  transform: scale(1) rotate(-5deg) translateX(0px) translateY(0px) skewX(1deg)
-    skewY(1deg);
-  /*-----------------------*/
-  text-shadow: 1px 1px #f7f33a, 2px 2px #f7f33a, 3px 3px #f7f33a,
-    4px 4px #f7f33a, 5px 5px #f7f33a, 6px 6px #852525, 7px 7px #bd1a1a,
-    8px 8px #bd1a1a, 9px 9px #bd1a1a, 10px 10px #bd1a1a, 11px 11px #bd1a1a,
-    12px 12px #bd1a1a, 13px 13px #bd1a1a, 14px 14px #bd1a1a, 15px 15px #bd1a1a,
-    16px 16px #000000, 17px 17px #000000, 18px 18px #000000, 19px 19px #000000,
-    20px 20px #000000, 21px 21px #000000, 22px 22px #000000, 23px 23px #000000,
-    24px 24px #ffffff, 25px 25px #f5f5f5, 26px 26px 6px #fdfdfd;
 }
 
 .leftside span:nth-child(3),
@@ -106,13 +84,6 @@
   font-size: 24px;
   margin-top: 80px;
   color: rgb(44, 44, 44);
-}
-
-.form-content-right1 {
-  float: right;
-
-  margin-top: 20px;
-  border-radius: 0 10px 10px 0;
 }
 
 .form1 h1 {
